--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             </span>
                             <span class="control-select">
 
-                                <input class="control-input" required type="tel" minlength="9"
+                                <input class="control-input" required type="tel" minlength="7"
                                     pattern="^[+]*[(]{0,1}[0-9]{1,4}[)]{0,1}[-\s\./0-9]*$" name="phone_number">
 
                                 <select name="code_phone" class="control-input control-input--small">
@@ -509,7 +509,7 @@
             </h2>
             <p class="popup-meil__subtitle">
 
-                טופס היכרות סוכן/ת ביטוח
+                טופס היכרות יועץ/ת משכנתא
             </p>
             <div class="popup-steps">
                 <h3 class="popup-steps__title">
@@ -605,7 +605,7 @@
 
                             </span>
                             <span class="control-select">
-                                <input class="control-input" required type="tel" minlength="9"
+                                <input class="control-input" required type="tel" minlength="7"
                                     pattern="^[+]*[(]{0,1}[0-9]{1,4}[)]{0,1}[-\s\./0-9]*$" name="phone_number">
                                 <select name="code_phone" class="control-input control-input--small">
                                     <option label=" " disabled selected></option>
@@ -630,17 +630,16 @@
                             </span>
 
                             <label>
-                                <input type="checkbox" value="פנסיוני" name="license[]">
+                                <input type="checkbox" value="עצמאי/ת" name="license[]">
                                 <span>
-                                    פנסיוני
+                                    עצמאי/ת
                                 </span>
                             </label>
 
                             <label>
                                 <input type="checkbox" value="כללי " name="license[]">
                                 <span>
-
-                                    כללי
+                                    שכיר/ה
                                 </span>
                             </label>
 
@@ -1094,7 +1093,7 @@
                             אנחנו
                             מגיעים מהעולם האמיתי, שם זיהינו צורך ממשי להקים פלטפורמה שתיתן לכם את הכלים לבצע את
                             <br>
-                            רכישת הביטוח המשתלם ביותר ללקוח בשקיפות, פשטות וחווית משתמש יוצאת מן הכלל. ב-ypamS תהנו
+                            רכישת הביטוח המשתלם ביותר ללקוח בשקיפות, פשטות וחווית משתמש יוצאת מן הכלל. ב-Smapy תהנו
                             <br>
                             משקיפות וחדשנות שתעזור לכם למקסם את הפוטנציאל העסקי שלכם בעולם הביטוח ע''י הגדלת ההכנסות
                             <br>
